--- a/pages/00.md
+++ b/pages/00.md
@@ -40,7 +40,7 @@ Pero aún habiendo estudiado escritura narrativa, el lenguaje tiene su mayor riq
 
 事实上，此刻我并没有完全按照我想要的方式表达。我正在努力简化我的表达方式，以免干扰自动翻译的工作。
 
-Ahora mismo, de hecho, no me estoy expresando como quisiera. Estoy tratando de hallanar mi forma de expresarme para no entorpecer el traductor automático en su trabajo.
+Ahora mismo, de hecho, no me estoy expresando como quisiera. Estoy tratando de allanar mi forma de expresarme para no entorpecer el traductor automático en su trabajo.
 
 <hr />
 
