--- a/pages/00.md
+++ b/pages/00.md
@@ -1,10 +1,18 @@
 # 2025年1月 | Enero de 2025
 
-## 华舸小男孩 | El niño Robinson
-
 自从上次拜访你家以来，我一直在思考一个已经萦绕在我心头多年的想法。
 
 Desde la ultima vez que visité tu casa estuve pensando mucho en una idea que tengo desde hace ya varios años.
+
+我想更好地了解东方人的思维方式。
+
+Quiero entender mejor cómo piensan en oriente.
+
+您介意交换信件吗？ 我可以把我的信翻译成中文，也可以把你的信从中文翻译成西班牙语。
+
+¿Te importaría intercambiar cartas? Yo  podría traducir al chino mis cartas y también desde el chino al español las tuyas.
+
+## 华舸小男孩 | El niño Robinson
 
 从小我就学会了小心避免误解。
 
