+ fang huizhen response

--- a/pages/00.md
+++ b/pages/00.md
@@ -1,4 +1,4 @@
-# 2025年1月 | Enero de 2025
+# 2025年1月31日 | 31 de enero de 2025
 
 自从上次拜访你家以来，我一直在思考一个已经萦绕在我心头多年的想法。
 {: .zh}
@@ -407,3 +407,7 @@ No tengo que rendirle cuentas ni mostrarle que progreso en la dirección que han
 
 Ya no soy un niño y mi deseo es aprender chino.
 {: .es}
+
+<center>
+[索引](index.md) | [一](01.md)
+</center>
