--- a/pages/01.md
+++ b/pages/01.md
@@ -31,5 +31,5 @@ Hoy es demasiado tarde, así que me detendré aquí y me iré a la cama. Anoche 
 {: .es}
 
 <center>
-[零](00.md) | [索引](index.md)
+[零](00.md) | [索引](index.md) | [二](02.md)
 </center>
