+ further improve in spanish for 02

--- a/pages/02.md
+++ b/pages/02.md
@@ -14,25 +14,32 @@ En occidente hay dificultad para entender el [无为](https://es.wikipedia.org/w
 
 Hace unos meses leí un libro sobre pintura china; la última cita es de este libro. Según entendí en chino hay dos términos para designar el vacío. Uno se contraponer al tener/haber. Y otro se contrapone a lo que está lleno. El primero es wú, el segundo xū. 
 
-De alguna forma me parecía más poética la idea del no hacer. El vacío, no como potencia, sino como estructura atenta contra la idea liberadora del no esfuerzo.
+Cuando un occidental piensa en wuwei, piensa en la idea de "no hacer". En hacer lo que no requiere un esfuerzo.
+
+El vacío (no como potencia, sino como estructura) atenta contra la idea liberadora del no esfuerzo.
 
 Tampoco las montañas cambian con facilidad. ¿Acaso seremos eso? No las montañas, sino el vacío entre ellas.
 
-De ser así, por ser exógeno, veo imposible modificarlas. Eso sí que es liberador como lo son tus palabras.
+De ser así, por ser exógeno, veo imposible modificarlas.
 
-Pero soy un animal que se deja llevar menos por el éxito que por la curiosidad.
+Que no pueda modificar lo que soy: eso sí que es liberador como lo son tus palabras.
+
+Pero soy un animal que se deja llevar menos por el éxito y más por la curiosidad.
 
 Permíteme explicarme. Espero no aburrirte...
 
 Eso escribí en un principio para mandarte. ¡Pero no vas a creer lo que terminó ocurriendo!
 
-Quise justificar mi pasión, mis intereses. Terminé encontrando un trabajo que escribí para la universidad en 2017. ¡En ese trabajo citaba el mismo autor del libro que estaba leyendo ahora!
+Quise justificar mi pasión, mis intereses. Terminé encontrando un trabajo que escribí para la universidad en 2017. ¡En ese trabajo citaba el mismo autor del libro que estaba leyendo ahora! ¿Serán la misma persona? Sería una coincidencia muy grata. Cuando ocurren coincidencias como esta siento la alegría que sienten los niños.
 
-Una coincidencia muy grata.
+Volviendo a mi idea, compartirte mi trabajo sigue siendo relevante.
 
-Volviendo a mi idea, compartirte mi trabajo sigue siendo relevante:
+En el trabajo hablo sobre dos poemas:
 
-El profesor canadiense de literatura Kerry McSweeney ha leído en el poema “1190” de Emily Dickinson una de sus más expresas críticas hacia el patriarcado. Para sostener esta interpretación se basa en la identidad femenina de la niebla como elemento de la naturaleza constituido por partículas individuales de rocío y reconociendo el imaginario fálico del sol. Ampliando su análisis, identificamos al sol, sustantivo de genero masculino en español, a la misma altura sintáctica que la niebla, de género femenino. Ambos comparten la categoría de núcleo sujeto en una unidad de sentido de dos versos en donde se los ilustra disputando. Ya en los últimos dos versos, el sol ocupa una posición de dominancia por sobre la niebla que es objeto directo del predicado. Este cambio, leído de manera secuencial, ilustra la crueldad de la hegemonía del poder masculino. Sin embargo, este análisis presuroso, incluso aunque se acepte la hipótesis de lectura de McSweeney, dista de contemplar todos los recursos empleados por Emily Dickinson y por esto mismo conducen a un trabajo lectura ingenuo.
+- "1190" de Emily Dickinson
+- "Là zhái" de Wang Wei
+
+Los dejo aquí como referencia:
 
 1190 (Traducción al español de Margarita Ardanaz)
 
@@ -60,6 +67,23 @@ And drove the Fog away --
 y a la Niebla ahuyentó —
 {: .es}
 
+
+復 返 但 空 鹿
+照 景 聞 山 柴
+青 入 人 不
+苔 深 語 見
+上 林 響 人
+
+No incluyo una traducción para este poema por múltiples motivos.
+
+Mi opinión personal es que la poesía china guarda en los caracteres chinos multiplicidad de sentidos que se pierden por completo cuando son traducidos. Me limitaré a mencionar aquí únicamente que como mínimo se pierde la información que se percibe de manera visual, inexistente en el español en el mismo grado.
+
+Para el trabajo que escribí en la facultad había leído un texto que recopilaba diecinueve traducciones de este poema. Por supuesto ninguna de las diecinueve alcanzaba a traducir por completo la multiplicidad de sentidos del poema. Analizar los diecinueve podría llegar a recuperar un porcentaje. Se me viene a la cabeza la belleza de una imagen en un caleidoscopio.
+
+El trabajo de la facultad decía cosas como estas:
+
+El profesor canadiense de literatura Kerry McSweeney ha leído en el poema “1190” de Emily Dickinson una de sus más expresas críticas hacia el patriarcado. Para sostener esta interpretación se basa en la identidad femenina de la niebla como elemento de la naturaleza constituido por partículas individuales de rocío y reconociendo el imaginario fálico del sol. Ampliando su análisis, identificamos al sol, sustantivo de genero masculino en español, a la misma altura sintáctica que la niebla, de género femenino. Ambos comparten la categoría de núcleo sujeto en una unidad de sentido de dos versos en donde se los ilustra disputando. Ya en los últimos dos versos, el sol ocupa una posición de dominancia por sobre la niebla que es objeto directo del predicado. Este cambio, leído de manera secuencial, ilustra la crueldad de la hegemonía del poder masculino. Sin embargo, este análisis presuroso, incluso aunque se acepte la hipótesis de lectura de McSweeney, dista de contemplar todos los recursos empleados por Emily Dickinson y por esto mismo conducen a un trabajo lectura ingenuo.
+
 El análisis de la forma en este poema es de especial interés, ya que permite establecer un paradigma claro de asociación con la poesía china tradicional. “1190” se trata de una cuarteta, es decir: una única estrofa de cuatro versos. De igual manera está contituída la forma poética jue-ju ( 絕句 ) que tanta extensión tuvo en el período de reinado de la dinastía Tang. Así mismo, la métrica lograda por Dickinson mantiene una relativa homogeneidad, ya que utiliza versos de entre seis y ocho sílabas. Esto es de especial importancia a la hora de relacionarlo con la poética oriental jue-ju y más a la hora de considerar la noción de fanopeia “gráfica”. Cada jue-ju está compuesto por cuatro versos de cinco caracteres cada uno. En el chino cada caracter está asociado fonéticamente a una única sílaba.
 
 Así, los poemas de esta forma se constituyen de tan solo veinte sílabas distribuidas en una grilla rectangular y conforman, junto con el espacio en blanco, un dibujo particular. Incluso para un occidental sin conocimiento del idioma chino, la lectura gráfica de los caracteres en un espacio tan reducido permiten encontrar repeticiones de caracteres y por lo tanto ser sensibles a experimentar una aliteración visual. De igual manera, es interesante destacar que existen en la grafía china caracteres compuestos conformados por un radical que carga con información semántica y una terminación conformada por uno o más caracteres primarios que dan valor sonoro a la totalidad del caracter complejo. Por lo que la repetición de una porción del mismo permiten reconocer sonidos homófonos, aunque el significado no sea el mismo. Esto cobra una importancia mayor en una lengua como la china que tiene una cantidad reducida de sonidos con los que operar. El poema de Emily Dickinson recrea este fenómeno a partir de la repetición de las palabras “Sun” y “Fog” independientemente de la lectura sonora de las mismas. Por otra parte, al igual que en el jue-ju, los cuatro versos se pueden agrupar en dos dísticos siguiendo un criterio de sentido y sintaxis. Manteniendo, como eco sonoro entre ellos, rima en los versos pares, “Day” y “away” respectivamente en el poema de Dickinson. La percepción primera del poema, la percepción visual de su distribución espacial como totalidad, se solapa con la forma china y la resonancia estructural no puede deberse ya a la casualidad, pero tampoco es la única analogía que puede encontrarse.
@@ -70,7 +94,7 @@ Llama la atención, entonces, que Dickinson no haya tomado la misma postura para
 
 En esto también se equivocaba McSweeney, ya que el juego entre la plenitud y el vacío, no es dual para los chinos, por lo que su interpretación de oposición niebla y sol no es más que un intento forzoso de imprimir filosofía dualista, puramente occidental, a una reescritura del género poético chino. Intento de reescritura a la que incluso Eliot Weinberger le habría disculpado algunas licencias. Definitivamente habría notado el filólogo que si bien no se usan mayúsculas para los verbos del poema “1190”, estos (“disputaban”, “descolgó” y “ahuyentó”) responden a lo estudiado por Fenollosa quien buscó identificar qué verbos son aptos para utilizarse en una traducción del chino. Los verbos que eligió Dickinson son verbos de acción fuertes e individualizados que se oponen a adjetivos, nombres y formas intransitivas; y por lo tanto, no aportan vacío al poema, sino plenitud. Fenollosa remarca a estos verbos como los ideales para traducir un poema del chino ya que reflejan con mayor fidelidad la manera en la que modela el accionar una lengua china que es aislante, no flexiva y posicional cuyos verbos son transitivos e intransitivos a la vez, pero nada dice de las frases verbales que abundan en la lengua inglesa. Margarita Ardanaz, por su parte, toma partido al traducir “drove away” por “ahuyentó”, ya que sustituye la frase verbal conformada por una parte plena, “drove”, y una vacía posiblemente involuntaria, “away”. El primer verbo del poema, “contested”, revela otro parentesco con la poesía china. Los verbos en “1190” al estar conjugados no permiten generar a partir de la atemporalidad la ambigüedad que tanto deslumbraba a Pound y a Fenollosa. Esto se debe a que se privilegia una única bifurcación de sentido. No es el caso de “contested”, ya que al ser este regular se conjuga en pasado simple de igual manera en que se construye su participio perfecto pasivo. Haciendo esta salvedad puede el primer verso traducirse como: “Niebla y Sol enfrentados”. Claro está que esta salvedad obligaría el agregado de un conector causal para reponer la unión entre el primer verso y el segundo, aunque tampoco esto justifica el trueque del pretérito perfecto simple por el pretérito imperfecto. Similar es la traducción del pronombre posesivo “his” por el “su” del español en el que no se evidencia el género del poseedor del “Látigo Amarillo” en tanto responde a la forma china, pero no es traducción fiel al poema de Dickinson. De cualquier manera y retornando al análisis principal, no siempre los veinte caracteres que conforman un jue-ju son palabras plenas.
 
-Recordemos el caso estudiado por Eliot Weinberger: “Là zhái” del poeta Wang Lei. En este se cuentan tres palabras vacías (“bù”/“Dàn”/“shàng”, en español: "no", "pero" y "sobre") y la repetición del caracter de persona. Conviven, entonces, palabras plenas con palabras vacías, oposición que cualquier occidental vería con negatividad o pesimismo. Pero no es el caso del pensamiento chino que “considera al vacío como el lugar donde las entidades vivientes o los signos se entrecruzan y se intercambian de manera no unívoca, y por ende como el lugar por excelencia donde se multiplica el sentido” (Cheng 2006: 46). Surge así la tercera fuerza, el aliento mediano, que seguramente habrá movido también a Dickinson para colocar algunos artículos y conectores que pudieran permitir articular la lengua inglesa. Por último, para esclarecer el sentido del poema y para contextualizar aún más la operación de reescritura, resulta conveniente emparentar el poema de Emily Dickinson con el de Wang Lei más allá de las posibles analogías estructurales.
+Recordemos el caso estudiado por Eliot Weinberger: “Là zhái” del poeta Wang Wei. En este se cuentan tres palabras vacías (“bù”/“Dàn”/“shàng”, en español: "no", "pero" y "sobre") y la repetición del caracter de persona. Conviven, entonces, palabras plenas con palabras vacías, oposición que cualquier occidental vería con negatividad o pesimismo. Pero no es el caso del pensamiento chino que “considera al vacío como el lugar donde las entidades vivientes o los signos se entrecruzan y se intercambian de manera no unívoca, y por ende como el lugar por excelencia donde se multiplica el sentido” (Cheng 2006: 46). Surge así la tercera fuerza, el aliento mediano, que seguramente habrá movido también a Dickinson para colocar algunos artículos y conectores que pudieran permitir articular la lengua inglesa. Por último, para esclarecer el sentido del poema y para contextualizar aún más la operación de reescritura, resulta conveniente emparentar el poema de Emily Dickinson con el de Wang Wei más allá de las posibles analogías estructurales.
 
 A similares conclusiones llegaron Weinberger, Fenollosa, Pound y Cheng a la hora de analizar la ausencia de las personas gramaticales. Para Weinberg que la encuentra en la mayoría de las diecinueve maneras de ver a Wang Wei no se trata sino de un invento de las malas traducciones occidentales. Tanto para Cheng como para Fenollosa y Pound la omisión de las personas gramaticales responden a una decisión tomada a consciencia que sitúa al sujeto en una posición “sobreentendida” de perceptor. Es él quien interioriza los elementos exteriores y establece las relaciones entre los seres y las cosas. Por ello no hay un sujeto presente en el bosque de los venados ni se interpone en la admiración de la lucha entre el sol y la neblina un yo. En ambos se nos presenta la naturaleza como temática e incluso personalizada descrita a partir de un instante perceptivo por un sujeto fuera del poema testigo de una revelación. Revelación que puede ser sintetizada en veintiún palabras para el caso de Dickinson o veinte caracteres para el caso de Wang Wei. La descripción de imágenes tan directas, propias de las jue-ju, no resultaría en más que transcripciones de los poemas. Ya Weinberger se encargó de depurar las traducciones pobres de lo mostrado por Wang Wei. Sin embargo, y lamentablemente, no podría darse un caso análogo con traducciones del poema de Dickinson ya que se encuentra lejos de alcanzar el juego poético que es posible en un jue-ju chino. El poema de Wang Wei permite lecturas múltiples debido a su atemporalidad y ambigüedad, pero no excluyentes ya que están todas contenidas en los veinte caracteres. Permite, a sí mismo, la posibilidad de invertir sentidos de lectura al desentenderse los ideogramas de la necesidad de sentido posicional. Incluso un mismo caracter puede leerse como brillo y como sombra, su opuesto. Y la satisfacción producida por esto no se trata de un ejercicio de vanidad literaria, se trata de la contemplación de una lengua donde la escritura es metafórica y la creación de sentidos opera de manera similar a la naturaleza, por medio de la acción.
 
