+ fix wang wei's poem in 02

--- a/pages/02.md
+++ b/pages/02.md
@@ -67,12 +67,8 @@ And drove the Fog away --
 y a la Niebla ahuyentó —
 {: .es}
 
-
-復 返 但 空 鹿
-照 景 聞 山 柴
-青 入 人 不
-苔 深 語 見
-上 林 響 人
+復 返 但 空 鹿<br>照 景 聞 山 柴<br>照 景 聞 山 柴<br>青 入 人 不<br>苔 深 語 見<br>上 林 響 人
+{: .zh}
 
 No incluyo una traducción para este poema por múltiples motivos.
 
@@ -100,13 +96,13 @@ A similares conclusiones llegaron Weinberger, Fenollosa, Pound y Cheng a la hora
 
 Como podrás observar en esa época tenía un profundo interés en entrelazar oriente y occidente. Pero la forma en la que escribí era demasiado rebuscada como para compartirla con mi padre, con mi familia.
 
-Imagino el eco de mis palabras doblando una esquina, mezclándose con el ruido del ambiente y luchando por sobrevivir. ¿Cuánto de este eco habrá sobrevivido hasta llegarte a vos?
+Imagino el eco de mis palabras doblando una esquina, mezclándose con ruido y luchando por sobrevivir. ¿Cuánto de este eco habrá sobrevivido hasta llegarte a vos?
 
 Una persona con mis intereses, que disfruta de perderse en los libros, ¿cómo podría aspirar a trabajar en una buena empresa?
 
-Es cierto, puedo comunicarme de esta forma con mi familia.
+Es cierto, puedo comunicarme de esta forma con mi familia. Pero aprenderé chino no solo para poder hablarlo.
 
-Pero aprenderé chino no solo para poder hablarlo. El inglés es un idioma horrible, pero me ha ayudado a leer una infinidad de textos. Sin el chino al menos la mitad de los libros del mundo son inaccesibles aún para mí.
+El inglés es un idioma horrible, pero me ha ayudado a leer una infinidad de textos. Sin el chino al menos la mitad de los libros del mundo son inaccesibles aún para mí.
 
 <center>
 [零](00.md), [一](01.md) | [索引](index.md)
