--- a/pages/02.md
+++ b/pages/02.md
@@ -1,108 +1,249 @@
 # 2025年2月1日 | 1 de febrero de 2025
 
+你的信让我陷入了深思。
+{: .zh}
+
 Tu carta me dejó reflexionando.
 
-En occidente hay dificultad para entender el [无为](https://es.wikipedia.org/wiki/Wu_wei). Las ideas que me compartiste resuenan mucho con esa filosofía.
+在西方，理解[无为](https://zh.wikipedia.org/wiki/%E6%97%A0%E4%B8%BA_(%E9%81%93%E5%AE%B6)) 是有难度的。你与我分享的那些思想与这种哲学产生了强烈的共鸣。
+{: .zh}
+
+En occidente hay dificultad para entender el wúwéi [无为](https://es.wikipedia.org/wiki/Wu_wei). Las ideas que me compartiste resuenan mucho con esa filosofía.
+
+您认为我是否应该放弃国学而投身于顺流而下之事？
+{: .zh}
 
 ¿Crees que debería abandonar los estudios del chino y dedicarme a aquello que fluya río abajo?
 
-!!! info quote "Lo más suave en el mundo le gana a la larga a lo más sólido. Lo-que-no-tiene penetra lo-que-no-tiene-vacío. Con ello aprendemos la ventaja del no actuar. Laozi (cap XVIII)"
-    Laozi (cap XVIII)
+!!! info quote "从长远来看，世界上柔软的东西比坚硬的东西更重要。没有的东西穿透没有无的东西。从这里我们认识到无为的好处。老子（第十八章）"
+    Lo más suave en el mundo le gana a la larga a lo más sólido. Lo-que-no-tiene penetra lo-que-no-tiene-vacío. Con ello aprendemos la ventaja del no actuar. Laozi (cap XVIII)
 
-!!! info quote "La imagen del valle está ligada a la del agua […]. Por doquier lo lleno constituye lo visible de la estructura, pero el vacío estructura el uso. François Cheng (Vacío y plenitud. Grupal 2022, p100)"
-    François Cheng (Vacío y plenitud. Grupal 2022, p100) 
+!!! info quote "谷的形象与水的形象相连……。满处构成了结构的可见部分，但空虚则构成了其用途。弗朗索瓦·程（《虚与实》，Grupal 2022，第100页）"
+    La imagen del valle está ligada a la del agua […]. Por doquier lo lleno constituye lo visible de la estructura, pero el vacío estructura el uso. François Cheng (Vacío y plenitud. Grupal 2022, p100)
 
-Hace unos meses leí un libro sobre pintura china; la última cita es de este libro. Según entendí en chino hay dos términos para designar el vacío. Uno se contraponer al tener/haber. Y otro se contrapone a lo que está lleno. El primero es wú, el segundo xū. 
+几个月前，我读了一本关于中国绘画的书；最后一句引用就来自这本书。据我理解，中文中有两个词来表示“空虚”。一个与“有”相对，另一个与“满”相对。前者是“无”，后者是“虚”。
+{: .zh}
 
-Cuando un occidental piensa en wuwei, piensa en la idea de "no hacer". En hacer lo que no requiere un esfuerzo.
+Hace unos meses leí un libro sobre pintura china; la última cita es de este libro. Según entendí en chino hay dos términos para designar el vacío. Uno se contraponer al tener/haber. Y otro se contrapone a lo que está lleno. El primero es 无 wú, el segundo 虛 xū. 
+
+当西方人想到“无为”时，他们想到的是“不做”的概念，即做那些不需要费力的事情。
+{: .zh}
+
+Cuando un occidental piensa en wúwéi, piensa en la idea de "no hacer". En hacer lo que no requiere un esfuerzo.
+
+空虚（不是作为潜力，而是作为结构）挑战了“不费力”的解放性理念。
+{: .zh}
 
 El vacío (no como potencia, sino como estructura) atenta contra la idea liberadora del no esfuerzo.
 
+山也不会轻易改变。难道我们就是那样吗？不是山，而是山之间的空虚。
+{: .zh}
+
 Tampoco las montañas cambian con facilidad. ¿Acaso seremos eso? No las montañas, sino el vacío entre ellas.
+
+如果是这样，由于它对我来说是外生的，所以我认为不可能修改它们。
+{: .zh}
 
 De ser así, por ser exógeno, veo imposible modificarlas.
 
-Que no pueda modificar lo que soy: eso sí que es liberador como lo son tus palabras.
+无法改变我是什么：这才是真正解放的，正如你的话一样。
+{: .zh}
+
+Que no pueda modificar lo que soy: eso sí que es liberador como también lo son tus palabras.
+
+但我是一个不太被成功驱动，而更多被好奇心驱使的动物。
+{: .zh}
 
 Pero soy un animal que se deja llevar menos por el éxito y más por la curiosidad.
 
+请允许我解释一下。希望不会让你感到无聊……
+{: .zh}
+
 Permíteme explicarme. Espero no aburrirte...
+
+这是我最初想写给你的内容。但你不会相信最后发生了什么！
+{: .zh}
 
 Eso escribí en un principio para mandarte. ¡Pero no vas a creer lo que terminó ocurriendo!
 
-Quise justificar mi pasión, mis intereses. Terminé encontrando un trabajo que escribí para la universidad en 2017. ¡En ese trabajo citaba el mismo autor del libro que estaba leyendo ahora! ¿Serán la misma persona? Sería una coincidencia muy grata. Cuando ocurren coincidencias como esta siento la alegría que sienten los niños.
+我想为我的激情和兴趣辩护。结果我找到了2017年为大学写的一篇论文。在那篇论文中，我引用了现在正在读的书的同一位作者！真的是同一个人吗？这将是一个非常愉快的巧合。当发生这样的巧合时，我感受到了孩子们的那种喜悦。
+{: .zh}
+
+Quise justificar mi pasión, mis intereses. Terminé encontrando un trabajo que escribí para la universidad en 2017. ¡En ese trabajo citaba el mismo autor del libro que estaba leyendo ahora! ¿En serio son la misma persona? Sería una coincidencia muy grata. Cuando ocurren coincidencias como esta experimento la alegría que sienten los niños.
+
+回到我的想法，与你分享我的论文仍然是有意义的。
+{: .zh}
 
 Volviendo a mi idea, compartirte mi trabajo sigue siendo relevante.
 
+在论文中，我讨论了两首诗：
+{: .zh}
+
 En el trabajo hablo sobre dos poemas:
 
+- 艾米莉·狄金森的《1190》
+{: .zh}
 - "1190" de Emily Dickinson
+
+- 王维的《鹿柴》
+{: .zh}
 - "Là zhái" de Wang Wei
+
+我把它们作为参考放在这里：
+{: .zh}
 
 Los dejo aquí como referencia:
 
+<hr />
+
+1190（玛格丽塔·阿尔达纳兹的西班牙语翻译）
+{: .zh}
+
 1190 (Traducción al español de Margarita Ardanaz)
 
-The Sun and Fog contested
+太阳与雾争
 {: .zh}
 
-Niebla y Sol disputaban
-{: .es}
+The Sun and Fog contested<br>Niebla y Sol disputaban
 
-The Government of Day --
+白昼的统治——
 {: .zh}
 
-el Gobierno del Día —
-{: .es}
+The Government of Day --<br>el Gobierno del Día —
 
-The Sun took down his Yellow Whip
+太阳取下他的黄鞭
 {: .zh}
 
-Descolgó el Sol su Látigo Amarillo
-{: .es}
+The Sun took down his Yellow Whip<br>Descolgó el Sol su Látigo Amarillo
 
-And drove the Fog away --
+将雾驱散——
 {: .zh}
 
-y a la Niebla ahuyentó —
-{: .es}
+And drove the Fog away --<br>y a la Niebla ahuyentó —
 
-復 返 但 空 鹿<br>照 景 聞 山 柴<br>照 景 聞 山 柴<br>青 入 人 不<br>苔 深 語 見<br>上 林 響 人
+<hr />
+
+復 返 但 空 鹿<br>照 景 聞 山 柴<br>青 入 人 不<br>苔 深 語 見<br>上 林 響 人
+{: .zh}
+
+<hr />
+我不包括这首诗的翻译，原因有很多。
 {: .zh}
 
 No incluyo una traducción para este poema por múltiples motivos.
 
+我个人认为，中国诗歌在汉字中保留了多重意义，这些意义在翻译时完全丢失了。我在这里只想说，至少视觉感知到的信息会丢失，而西班牙语中则不存在同样的情况。
+{: .zh}
+
 Mi opinión personal es que la poesía china guarda en los caracteres chinos multiplicidad de sentidos que se pierden por completo cuando son traducidos. Me limitaré a mencionar aquí únicamente que como mínimo se pierde la información que se percibe de manera visual, inexistente en el español en el mismo grado.
+
+在我为大学写的论文中，我读了一本汇集了这首诗十九种翻译的书。当然，这十九种翻译中没有一种能够完全传达这首诗的多重意义。分析这十九种翻译可能会恢复一部分。我想到了万花筒中图像的美丽。
+{: .zh}
 
 Para el trabajo que escribí en la facultad había leído un texto que recopilaba diecinueve traducciones de este poema. Por supuesto ninguna de las diecinueve alcanzaba a traducir por completo la multiplicidad de sentidos del poema. Analizar los diecinueve podría llegar a recuperar un porcentaje. Se me viene a la cabeza la belleza de una imagen en un caleidoscopio.
 
+我的专著中是这样说的：
+{: .zh}
+
 El trabajo de la facultad decía cosas como estas:
 
-El profesor canadiense de literatura Kerry McSweeney ha leído en el poema “1190” de Emily Dickinson una de sus más expresas críticas hacia el patriarcado. Para sostener esta interpretación se basa en la identidad femenina de la niebla como elemento de la naturaleza constituido por partículas individuales de rocío y reconociendo el imaginario fálico del sol. Ampliando su análisis, identificamos al sol, sustantivo de genero masculino en español, a la misma altura sintáctica que la niebla, de género femenino. Ambos comparten la categoría de núcleo sujeto en una unidad de sentido de dos versos en donde se los ilustra disputando. Ya en los últimos dos versos, el sol ocupa una posición de dominancia por sobre la niebla que es objeto directo del predicado. Este cambio, leído de manera secuencial, ilustra la crueldad de la hegemonía del poder masculino. Sin embargo, este análisis presuroso, incluso aunque se acepte la hipótesis de lectura de McSweeney, dista de contemplar todos los recursos empleados por Emily Dickinson y por esto mismo conducen a un trabajo lectura ingenuo.
+加拿大文学教授克里·麦克苏尼在艾米莉·狄金森的诗《1190》中读到了她对父权制最明确的批评之一。为了支持这一解释，他基于雾作为自然界元素的女性身份，由单个露珠粒子构成，并承认太阳的阳具象征。扩展他的分析，我们识别出太阳，西班牙语中的阳性名词，与雾在句法上处于同一水平。两者在两个诗句的意义单元中共享主语核心的地位，描绘了它们的争执。在最后两行中，太阳占据了主导地位，雾成为谓语的直接宾语。这一变化，按顺序阅读，说明了男性权力霸权的残酷性。然而，这种匆忙的分析，即使接受麦克苏尼的阅读假设，也远未涵盖艾米莉·狄金森使用的所有资源，因此导致了一种天真的阅读工作。
+{: .zh}
 
-El análisis de la forma en este poema es de especial interés, ya que permite establecer un paradigma claro de asociación con la poesía china tradicional. “1190” se trata de una cuarteta, es decir: una única estrofa de cuatro versos. De igual manera está contituída la forma poética jue-ju ( 絕句 ) que tanta extensión tuvo en el período de reinado de la dinastía Tang. Así mismo, la métrica lograda por Dickinson mantiene una relativa homogeneidad, ya que utiliza versos de entre seis y ocho sílabas. Esto es de especial importancia a la hora de relacionarlo con la poética oriental jue-ju y más a la hora de considerar la noción de fanopeia “gráfica”. Cada jue-ju está compuesto por cuatro versos de cinco caracteres cada uno. En el chino cada caracter está asociado fonéticamente a una única sílaba.
+El profesor canadiense de literatura Kerry McSweeney ha leído en el poema “1190” de Emily Dickinson una de sus más expresas críticas hacia el patriarcado. Para sostener esta interpretación se basa en la identidad femenina de la niebla como elemento de la naturaleza constituido por partículas individuales de rocío y reconociendo el imaginario fálico del sol. Ampliando su análisis, identificamos al sol, sustantivo de genero masculino en español, a la misma altura sintáctica que la niebla, de género femenino. Ambos comparten la categoría de núcleo sujeto en una unidad de sentido de dos versos en donde se los ilustra disputando. Ya en los últimos dos versos, el sol ocupa una posición de dominancia por sobre la niebla que es objeto directo del predicado. Este cambio, leído de manera secuencial, ilustra la crueldad de la hegemonía del poder masculino. Sin embargo, este análisis presuroso, incluso aunque se acepte la hipótesis de lectura de McSweeney, dista de contemplar todos los recursos empleados por Emily Dickinson y por esto mismo conducen a un trabajo de lectura ingenuo.
 
-Así, los poemas de esta forma se constituyen de tan solo veinte sílabas distribuidas en una grilla rectangular y conforman, junto con el espacio en blanco, un dibujo particular. Incluso para un occidental sin conocimiento del idioma chino, la lectura gráfica de los caracteres en un espacio tan reducido permiten encontrar repeticiones de caracteres y por lo tanto ser sensibles a experimentar una aliteración visual. De igual manera, es interesante destacar que existen en la grafía china caracteres compuestos conformados por un radical que carga con información semántica y una terminación conformada por uno o más caracteres primarios que dan valor sonoro a la totalidad del caracter complejo. Por lo que la repetición de una porción del mismo permiten reconocer sonidos homófonos, aunque el significado no sea el mismo. Esto cobra una importancia mayor en una lengua como la china que tiene una cantidad reducida de sonidos con los que operar. El poema de Emily Dickinson recrea este fenómeno a partir de la repetición de las palabras “Sun” y “Fog” independientemente de la lectura sonora de las mismas. Por otra parte, al igual que en el jue-ju, los cuatro versos se pueden agrupar en dos dísticos siguiendo un criterio de sentido y sintaxis. Manteniendo, como eco sonoro entre ellos, rima en los versos pares, “Day” y “away” respectivamente en el poema de Dickinson. La percepción primera del poema, la percepción visual de su distribución espacial como totalidad, se solapa con la forma china y la resonancia estructural no puede deberse ya a la casualidad, pero tampoco es la única analogía que puede encontrarse.
+这首诗的形式分析特别有趣，因为它可以建立一个与中国传统诗歌的明确关联范式。《1190》是一首四行诗，即由四行组成的单一诗节。同样，绝句（juéjù）这种诗歌形式在唐代也非常流行。狄金森实现的韵律保持了相对的均匀性，因为她使用了六到八个音节的诗句。这在与中国绝句诗歌的关联中尤为重要，尤其是在考虑“图形意象诗”概念时。
+{: .zh}
+
+El análisis de la forma en este poema es de especial interés, ya que permite establecer un paradigma claro de asociación con la poesía china tradicional. “1190” se trata de una cuarteta, es decir: una única estrofa de cuatro versos. De igual manera está contituída la forma poética juéjù ( 絕句 ) que tanta extensión tuvo en el período de reinado de la dinastía Tang. Así mismo, la métrica lograda por Dickinson mantiene una relativa homogeneidad, ya que utiliza versos de entre seis y ocho sílabas. Esto es de especial importancia a la hora de relacionarlo con la poética oriental juéjù y más a la hora de considerar la noción de fanopeia “gráfica”.
+
+每首绝句由四节五个汉字的诗句组成。在中文中，每个字符在语音上与一个音节相关联。因此，这种形式的诗歌仅由二十个音节组成，分布在一个矩形网格中，并与空白空间一起形成一个特定的图画。即使对于不懂中文的西方人来说，在如此有限的空间中对字符的图形阅读也能发现字符的重复，从而体验到视觉上的头韵。
+{: .zh}
+
+Cada juéjù está compuesto por cuatro versos de cinco caracteres cada uno. En el chino cada caracter está asociado fonéticamente a una única sílaba. Así, los poemas de esta forma se constituyen de tan solo veinte sílabas distribuidas en una grilla rectangular y conforman, junto con el espacio en blanco, un dibujo particular. Incluso para un occidental sin conocimiento del idioma chino, la lectura gráfica de los caracteres en un espacio tan reducido permiten encontrar repeticiones de caracteres y por lo tanto ser sensibles a experimentar una aliteración visual.
+
+同样，有趣的是，中文书写中有复合字符，由一个带有语义信息的部首和一个由一个或多个主要字符组成的结尾组成，这些主要字符为整个复合字符提供声音价值。因此，重复相同部分允许识别同音词，尽管含义不同。这在像中文这样操作声音数量有限的语言中尤为重要。
+{: .zh}
+
+De igual manera, es interesante destacar que existen en la grafía china caracteres compuestos conformados por un radical que carga con información semántica y una terminación conformada por uno o más caracteres primarios que dan valor sonoro a la totalidad del caracter complejo. Por lo que la repetición de una porción del mismo permiten reconocer sonidos homófonos, aunque el significado no sea el mismo. Esto cobra una importancia mayor en una lengua como la china que tiene una cantidad reducida de sonidos con los que operar.
+
+艾米莉·狄金森的诗通过重复“太阳|Sun”和“青蛙|Fog”这两个词来重现这一现象，无论它们的声音阅读如何。另一方面，与绝句一样，这四行可以根据意义和句法标准分为两个对联。保持它们之间的回声，偶数行押韵，分别是狄金森诗中的“天|Day”和“离开| away”。对诗歌的第一次感知，其空间分布的整体视觉感知，与中国形式重叠，结构共鸣不能归因于偶然。这也不是唯一可以找到的类比。
+{: .zh}
+
+El poema de Emily Dickinson recrea este fenómeno a partir de la repetición de las palabras “Sun” y “Fog” independientemente de la lectura sonora de las mismas. Por otra parte, al igual que en el juéjù, los cuatro versos se pueden agrupar en dos dísticos siguiendo un criterio de sentido y sintaxis. Manteniendo, como eco sonoro entre ellos, rima en los versos pares, “Day” y “away” respectivamente en el poema de Dickinson. La percepción primera del poema, la percepción visual de su distribución espacial como totalidad, se solapa con la forma china y la resonancia estructural no puede deberse ya a la casualidad. Tampoco es la única analogía que puede encontrarse.
+
+尽管在艾米莉·狄金森的诗歌中名词大写的使用是常见的，但在这首诗中没有一个名词不是以大写字母开头的。可以在这意图与中文书写之间画一条平行线。由于每个汉字都是一个表意文字，其图形与单词本身的含义有关，但“它们不寻求复制事物的外部外观，而是通过旨在揭示其本质的基本特征的组合来描绘它们”（程，2006年：15）。因此，“Sun”或西班牙语中的“Sol”一词更接近其抽象、其完整想象及其多重含义。记住，中文缺乏冠词、性别和数量，赋予单词一种特殊的印记。因此，当一个中国人谈论一棵树，特别是在诗歌中谈论时，符号中有一种整体性的回忆，因为它对于一棵树和数百棵树是相同的，甚至森林的字符由两个树字符组成。此外，诗人“心中既有特定的树，也有本质上的树”（程，2006年：68）。弗朗索瓦·程也使用大写字母来说明这一想法。
+{: .zh}
 
 Si bien el uso de las mayúsculas en los sustantivos es recurrente en la poesía de Emily Dickinson, en este poema en particular no se encuentra un sustantivo que no inicie con mayúscula. Se puede trazar un paralelo entre esta intención y la grafía de la escritura china. Dado que cada caracter chino es un ideograma, su dibujo guarda relación con el significado de la palabra misma, pero “no buscan copiar el aspecto externo de las cosas, sino figurarlas por medio de rasgos esenciales cuyas combinaciones pretenden revelar su esencia”(Cheng 2006: 15). Así la palabra “Sun”, o “Sol” en español, toma una impronta más cercana a su abstracción, a su imaginario completo y a sus múltiples acepciones. Recordemos que la falta de artículos, género y número del chino dota a las palabras de una impronta particular. Así, cuando un chino habla de un árbol, y en particular cuando habla de este en poesía, hay una reminiscencia totalizadora en el signo, ya que es el mismo para un árbol, como para cientos de estos y hasta el caracter de bosque se forma con dos caracteres de árbol. Pero, además, el poeta “tiene en mente tanto el árbol particular como el Árbol en su esencia” (Cheng 2006: 68). Utiliza también François Cheng la mayúscula para ilustrar esta idea.
 
-Llama la atención, entonces, que Dickinson no haya tomado la misma postura para los verbos, ya que es esta dupla de palabras nominales y verbales las que constituyen el grupo de palabras plenas en la literatura china. Con la mayor cantidad de ellas forma un jue-ju el poeta que “no busca, por el proceso de reducción, simplificar en grado extremo el lenguaje, sino incrementar el juego entre lo nominal y lo verbal, e introducir implícitamente en la lengua la dimensión del vacío” (Cheng 2006: 67). 
 
-En esto también se equivocaba McSweeney, ya que el juego entre la plenitud y el vacío, no es dual para los chinos, por lo que su interpretación de oposición niebla y sol no es más que un intento forzoso de imprimir filosofía dualista, puramente occidental, a una reescritura del género poético chino. Intento de reescritura a la que incluso Eliot Weinberger le habría disculpado algunas licencias. Definitivamente habría notado el filólogo que si bien no se usan mayúsculas para los verbos del poema “1190”, estos (“disputaban”, “descolgó” y “ahuyentó”) responden a lo estudiado por Fenollosa quien buscó identificar qué verbos son aptos para utilizarse en una traducción del chino. Los verbos que eligió Dickinson son verbos de acción fuertes e individualizados que se oponen a adjetivos, nombres y formas intransitivas; y por lo tanto, no aportan vacío al poema, sino plenitud. Fenollosa remarca a estos verbos como los ideales para traducir un poema del chino ya que reflejan con mayor fidelidad la manera en la que modela el accionar una lengua china que es aislante, no flexiva y posicional cuyos verbos son transitivos e intransitivos a la vez, pero nada dice de las frases verbales que abundan en la lengua inglesa. Margarita Ardanaz, por su parte, toma partido al traducir “drove away” por “ahuyentó”, ya que sustituye la frase verbal conformada por una parte plena, “drove”, y una vacía posiblemente involuntaria, “away”. El primer verbo del poema, “contested”, revela otro parentesco con la poesía china. Los verbos en “1190” al estar conjugados no permiten generar a partir de la atemporalidad la ambigüedad que tanto deslumbraba a Pound y a Fenollosa. Esto se debe a que se privilegia una única bifurcación de sentido. No es el caso de “contested”, ya que al ser este regular se conjuga en pasado simple de igual manera en que se construye su participio perfecto pasivo. Haciendo esta salvedad puede el primer verso traducirse como: “Niebla y Sol enfrentados”. Claro está que esta salvedad obligaría el agregado de un conector causal para reponer la unión entre el primer verso y el segundo, aunque tampoco esto justifica el trueque del pretérito perfecto simple por el pretérito imperfecto. Similar es la traducción del pronombre posesivo “his” por el “su” del español en el que no se evidencia el género del poseedor del “Látigo Amarillo” en tanto responde a la forma china, pero no es traducción fiel al poema de Dickinson. De cualquier manera y retornando al análisis principal, no siempre los veinte caracteres que conforman un jue-ju son palabras plenas.
+
+引人注目的是，狄金森没有对动词采取同样的立场，因为正是这些名词和动词对构成了中国文学中的完整词汇。诗人用最多的这些词汇组成绝句，“不是通过减少的过程寻求极度简化语言，而是增加名词和动词之间的游戏，并隐含地引入空虚的维度”（程，2006年：67）。
+{: .zh}
+
+Llama la atención, entonces, que Dickinson no haya tomado la misma postura para los verbos, ya que es esta dupla de palabras nominales y verbales las que constituyen el grupo de palabras plenas en la literatura china. Con la mayor cantidad de ellas forma un juéjù el poeta que “no busca, por el proceso de reducción, simplificar en grado extremo el lenguaje, sino incrementar el juego entre lo nominal y lo verbal, e introducir implícitamente en la lengua la dimensión del vacío” (Cheng 2006: 67).
+
+麦克苏尼在这方面也犯了错误，因为满与空之间的游戏对中国人来说不是二元的，因此他对雾与太阳对立的解释不过是一种强行将西方纯粹的二元哲学印在中国诗歌体裁的改写上的尝试。即使是埃利奥特·温伯格也会原谅这种改写的一些自由。这位语言学家肯定会注意到，尽管《1190》中的动词没有使用大写字母，但这些动词（“disputaban”，“descolgó”和“ahuyentó”）回应了费诺洛萨的研究，他试图确定哪些动词适合用于中文翻译。狄金森选择的动词是强烈且个性化的动作动词，与形容词、名词和不及物形式相对立；因此，它们没有为诗歌带来空虚，而是带来了充实。费诺洛萨强调这些动词是翻译中文诗歌的理想选择，因为它们更忠实地反映了中文这种孤立、非屈折和位置语言的行为模式，其动词同时是及物和不及物的，但关于英语中丰富的动词短语，他什么也没说。另一方面，玛格丽塔·阿尔达纳兹在将“drove away”翻译为“ahuyentó”时采取了立场，因为她用可能无意中空虚的部分“away”替换了由完整部分“drove”组成的动词短语。诗歌中的第一个动词“contested”揭示了与中国诗歌的另一个亲缘关系。《1190》中的动词由于被变位，不允许从无时间性中产生使庞德和费诺洛萨着迷的歧义。这是因为优先考虑了一种单一的意义分叉。对于“contested”来说并非如此，因为它是规则的，过去简单时态与其完成被动分词形式相同。有了这个保留，第一行可以翻译为：“Niebla y Sol enfrentados”。当然，这个保留将需要添加一个因果连接词来恢复第一行和第二行之间的连接，尽管这也不能证明用未完成过去时替换简单过去时的合理性。类似的是，将物主代词“his”翻译为西班牙语中的“su”，其中没有体现出“黄鞭”所有者的性别，虽然它回应了中文形式，但不是对狄金森诗歌的忠实翻译。无论如何，回到主要分析，并非总是构成绝句的二十个字符都是完整词汇。
+{: .zh}
+
+En esto también se equivocaba McSweeney, ya que el juego entre la plenitud y el vacío, no es dual para los chinos, por lo que su interpretación de oposición niebla y sol no es más que un intento forzoso de imprimir filosofía dualista, puramente occidental, a una reescritura del género poético chino. Intento de reescritura a la que incluso Eliot Weinberger le habría disculpado algunas licencias. Definitivamente habría notado el filólogo que si bien no se usan mayúsculas para los verbos del poema “1190”, estos (“disputaban”, “descolgó” y “ahuyentó”) responden a lo estudiado por Fenollosa quien buscó identificar qué verbos son aptos para utilizarse en una traducción del chino. Los verbos que eligió Dickinson son verbos de acción fuertes e individualizados que se oponen a adjetivos, nombres y formas intransitivas; y por lo tanto, no aportan vacío al poema, sino plenitud. Fenollosa remarca a estos verbos como los ideales para traducir un poema del chino ya que reflejan con mayor fidelidad la manera en la que modela el accionar una lengua china que es aislante, no flexiva y posicional cuyos verbos son transitivos e intransitivos a la vez, pero nada dice de las frases verbales que abundan en la lengua inglesa. Margarita Ardanaz, por su parte, toma partido al traducir “drove away” por “ahuyentó”, ya que sustituye la frase verbal conformada por una parte plena, “drove”, y una vacía posiblemente involuntaria, “away”. El primer verbo del poema, “contested”, revela otro parentesco con la poesía china. Los verbos en “1190” al estar conjugados no permiten generar a partir de la atemporalidad la ambigüedad que tanto deslumbraba a Pound y a Fenollosa. Esto se debe a que se privilegia una única bifurcación de sentido. No es el caso de “contested”, ya que al ser este regular se conjuga en pasado simple de igual manera en que se construye su participio perfecto pasivo. Haciendo esta salvedad puede el primer verso traducirse como: “Niebla y Sol enfrentados”. Claro está que esta salvedad obligaría el agregado de un conector causal para reponer la unión entre el primer verso y el segundo, aunque tampoco esto justifica el trueque del pretérito perfecto simple por el pretérito imperfecto. Similar es la traducción del pronombre posesivo “his” por el “su” del español en el que no se evidencia el género del poseedor del “Látigo Amarillo” en tanto responde a la forma china, pero no es traducción fiel al poema de Dickinson. De cualquier manera y retornando al análisis principal, no siempre los veinte caracteres que conforman un juéjù son palabras plenas.
+
+让我们回顾一下埃利奥特·温伯格研究的案例：王维的《鹿柴》。在这首诗中，有三个虚词（“不”/“但”/“上”，西班牙语中意为“不”、“但”和“上”）以及“人”字的重复。因此，实词与虚词共存，这种对立在西方人眼中可能带有消极或悲观的色彩。但中国思想并非如此，它“将空虚视为生命体或符号非单一方式交叉和交换的地方，因此也是意义倍增的卓越场所”（程，2006年：46）。于是出现了第三种力量，即中间的气息，这肯定也促使狄金森插入一些冠词和连接词，以使英语能够清晰地表达出来。最后，为了阐明这首诗的意义并进一步将重写行为置于特定的语境中，将艾米莉·狄金森的诗与王维的诗进行超越可能的结构类比联系起来会很方便。
+{: .zh}
 
 Recordemos el caso estudiado por Eliot Weinberger: “Là zhái” del poeta Wang Wei. En este se cuentan tres palabras vacías (“bù”/“Dàn”/“shàng”, en español: "no", "pero" y "sobre") y la repetición del caracter de persona. Conviven, entonces, palabras plenas con palabras vacías, oposición que cualquier occidental vería con negatividad o pesimismo. Pero no es el caso del pensamiento chino que “considera al vacío como el lugar donde las entidades vivientes o los signos se entrecruzan y se intercambian de manera no unívoca, y por ende como el lugar por excelencia donde se multiplica el sentido” (Cheng 2006: 46). Surge así la tercera fuerza, el aliento mediano, que seguramente habrá movido también a Dickinson para colocar algunos artículos y conectores que pudieran permitir articular la lengua inglesa. Por último, para esclarecer el sentido del poema y para contextualizar aún más la operación de reescritura, resulta conveniente emparentar el poema de Emily Dickinson con el de Wang Wei más allá de las posibles analogías estructurales.
 
-A similares conclusiones llegaron Weinberger, Fenollosa, Pound y Cheng a la hora de analizar la ausencia de las personas gramaticales. Para Weinberg que la encuentra en la mayoría de las diecinueve maneras de ver a Wang Wei no se trata sino de un invento de las malas traducciones occidentales. Tanto para Cheng como para Fenollosa y Pound la omisión de las personas gramaticales responden a una decisión tomada a consciencia que sitúa al sujeto en una posición “sobreentendida” de perceptor. Es él quien interioriza los elementos exteriores y establece las relaciones entre los seres y las cosas. Por ello no hay un sujeto presente en el bosque de los venados ni se interpone en la admiración de la lucha entre el sol y la neblina un yo. En ambos se nos presenta la naturaleza como temática e incluso personalizada descrita a partir de un instante perceptivo por un sujeto fuera del poema testigo de una revelación. Revelación que puede ser sintetizada en veintiún palabras para el caso de Dickinson o veinte caracteres para el caso de Wang Wei. La descripción de imágenes tan directas, propias de las jue-ju, no resultaría en más que transcripciones de los poemas. Ya Weinberger se encargó de depurar las traducciones pobres de lo mostrado por Wang Wei. Sin embargo, y lamentablemente, no podría darse un caso análogo con traducciones del poema de Dickinson ya que se encuentra lejos de alcanzar el juego poético que es posible en un jue-ju chino. El poema de Wang Wei permite lecturas múltiples debido a su atemporalidad y ambigüedad, pero no excluyentes ya que están todas contenidas en los veinte caracteres. Permite, a sí mismo, la posibilidad de invertir sentidos de lectura al desentenderse los ideogramas de la necesidad de sentido posicional. Incluso un mismo caracter puede leerse como brillo y como sombra, su opuesto. Y la satisfacción producida por esto no se trata de un ejercicio de vanidad literaria, se trata de la contemplación de una lengua donde la escritura es metafórica y la creación de sentidos opera de manera similar a la naturaleza, por medio de la acción.
+温伯格、费诺洛萨、庞德和程在分析语法人称的缺失时得出了类似的结论。对于温伯格来说，他在大多数十九种看待王维的方式中发现的这种缺失不过是西方糟糕翻译的发明。对于程、费诺洛萨和庞德来说，语法人称的省略是一种有意识的决定，将主体置于“隐含”的感知者位置。正是他内化了外部元素，并建立了生物与事物之间的关系。因此，在鹿的森林中没有主体存在，也没有一个“我”介入到对太阳与雾之间斗争的欣赏中。在这两首诗中，自然作为主题甚至拟人化地呈现，通过一个诗外主体的感知瞬间描述，见证了一种启示。这种启示可以概括为狄金森诗中的二十一个单词或王维诗中的二十个字符。如此直接的图像描述，典型的绝句，不过是对诗歌的转录。温伯格已经负责清理了对王维所展示内容的糟糕翻译。然而，遗憾的是，狄金森的诗无法达到中文绝句中可能的诗歌游戏。王维的诗由于其无时间性和歧义性允许多重阅读，但并不排斥，因为它们都包含在二十个字符中。它还允许颠倒阅读意义的可能性，因为表意文字脱离了位置意义的需要。甚至同一个字符可以读作光亮和阴影，它的对立面。由此产生的满足感不是文学虚荣的练习，而是对一种语言的沉思，在这种语言中，书写是隐喻的，意义的创造以类似于自然的方式运作，通过行动。
+{: .zh}
 
-Como podrás observar en esa época tenía un profundo interés en entrelazar oriente y occidente. Pero la forma en la que escribí era demasiado rebuscada como para compartirla con mi padre, con mi familia.
+A similares conclusiones llegaron Weinberger, Fenollosa, Pound y Cheng a la hora de analizar la ausencia de las personas gramaticales. Para Weinberg que la encuentra en la mayoría de las diecinueve maneras de ver a Wang Wei no se trata sino de un invento de las malas traducciones occidentales. Tanto para Cheng como para Fenollosa y Pound la omisión de las personas gramaticales responden a una decisión tomada a consciencia que sitúa al sujeto en una posición “sobreentendida” de perceptor. Es él quien interioriza los elementos exteriores y establece las relaciones entre los seres y las cosas. Por ello no hay un sujeto presente en el bosque de los venados ni se interpone en la admiración de la lucha entre el sol y la neblina un yo. En ambos se nos presenta la naturaleza como temática e incluso personalizada descrita a partir de un instante perceptivo por un sujeto fuera del poema testigo de una revelación. Revelación que puede ser sintetizada en veintiún palabras para el caso de Dickinson o veinte caracteres para el caso de Wang Wei. La descripción de imágenes tan directas, propias de las juéjù, no resultaría en más que transcripciones de los poemas. Ya Weinberger se encargó de depurar las traducciones pobres de lo mostrado por Wang Wei. Sin embargo, y lamentablemente, no podría darse un caso análogo con traducciones del poema de Dickinson ya que se encuentra lejos de alcanzar el juego poético que es posible en un juéjù chino. El poema de Wang Wei permite lecturas múltiples debido a su atemporalidad y ambigüedad, pero no excluyentes ya que están todas contenidas en los veinte caracteres. Permite, a sí mismo, la posibilidad de invertir sentidos de lectura al desentenderse los ideogramas de la necesidad de sentido posicional. Incluso un mismo caracter puede leerse como brillo y como sombra, su opuesto. Y la satisfacción producida por esto no se trata de un ejercicio de vanidad literaria, se trata de la contemplación de una lengua donde la escritura es metafórica y la creación de sentidos opera de manera similar a la naturaleza, por medio de la acción.
 
-Imagino el eco de mis palabras doblando una esquina, mezclándose con ruido y luchando por sobrevivir. ¿Cuánto de este eco habrá sobrevivido hasta llegarte a vos?
+日常的忙碌使我脱离了我能够写出那样作品的现实。
+{: .zh}
 
-Una persona con mis intereses, que disfruta de perderse en los libros, ¿cómo podría aspirar a trabajar en una buena empresa?
+El trajín cotidiano me extrae de una realidad en la que fui capaz de escribir un trabajo como ese.
 
-Es cierto, puedo comunicarme de esta forma con mi familia. Pero aprenderé chino no solo para poder hablarlo.
+正如你所看到的，那时我对连接东西方有着浓厚的兴趣。但我写作的方式太过复杂，无法与我的父亲、我的家人分享。我想象着我的话语的回声转过一个角落，与噪音混合并努力生存。这些回声有多少能传到你那里？ 确实，我可以用这种方式与我的家人交流。但我学习中文不仅仅是为了能够说它。
+{: .zh}
+
+Como podrás observar en esa época tenía un profundo interés en entrelazar oriente y occidente. Pero la forma en la que escribí era demasiado rebuscada como para compartirla con mi padre, con mi familia. Imagino el eco de mis palabras doblando una esquina, mezclándose con ruido y luchando por sobrevivir. ¿Cuánto de este eco habrá sobrevivido hasta llegarte a vos? Es cierto, puedo comunicarme de esta forma con mi familia. Pero aprenderé chino no solo para poder hablarlo.
+
+英语是一种糟糕的语言，但它帮助我阅读了无数文本。没有中文，世界上至少一半的书对我来说仍然是无法触及的。
+{: .zh}
 
 El inglés es un idioma horrible, pero me ha ayudado a leer una infinidad de textos. Sin el chino al menos la mitad de los libros del mundo son inaccesibles aún para mí.
+
+一个像我这样兴趣广泛、喜欢沉浸在书海中的人，在一家好公司工作能幸福吗？ 掌握中文似乎并没有阻碍我的进步，反而与它相辅相成。我想我们现在已经回到了最初的起点：我们又回到了“无为”的概念。
+{: .zh}
+
+Una persona con mis intereses, que disfruta de perderse en los libros, ¿puede ser feliz trabajando en una buena empresa? El dominio del chino parece que no obstaculiza mi progreso, si no que es sinérgico con este. Creo que ahora hemos dado la vuelta completa: hemos vuelto al concepto de wúwéi.
+
+
+正如你所看到的，我对中文的兴趣不仅仅是表面的愿望。
+{: .zh}
+
+Como puedes ver, no me interesa el idioma chino únicamente como deseo superficial.
+
+如果我们用完美的中文进行日常和实用的交流，我可能不会感到满足。我也对文化、故事感兴趣。只有当我了解关于我的家庭（和我的文化遗产）的一切时，我的精神才能得到满足。
+{: .zh}
+
+Si intercambiaramos un conversación cotidiana y pragmática en perfecto chino, yo no podría estar satisfecho. Me interesa también la cultura, las historias. Solo una vez lo sepa todo sobre mi familia (y mi herencia cultural) podrá mi espíritu ser satisfecho.
+
+我有很多疑问，但我们可以从小事开始。
+{: .zh}
+
+Tengo muchas dudas, pero podemos empezar por pequeñas cosas.
+
+例如，你的名字是由哪些汉字组成的？他们是如何为你选择这个名字的？你喜欢它吗？它让你想到什么特别的东西吗？
+{: .zh}
+
+Por ejemplo, ¿por qué caracteres chinos está compuesto tu nombre? ¿Cómo eligieron este nombre para vos? ¿Te gusta? ¿Te hace pensar en algo en especial?
+
+作为我第一封信的标题，我选择了：“华舸小男孩”。我的中文名字是你给我的，而不是我父亲。你能告诉我你是怎么选择的吗？是因为它的发音吗？它的字符有什么秘密含义吗？它与某个著名人物有关吗？
+{: .zh}
+
+A modo de título para mi primera carta elegí: "华舸小男孩". Mi nombre en chino me lo diste vos y no mi padre. ¿Podrías contarme cómo lo elegiste? ¿Fue por su sonido? ¿Guardan algún significado secreto sus caracteres? ¿Está relacionado con algún personaje famoso?
 
 <center>
 [零](00.md), [一](01.md) | [索引](index.md)
