+ fixes to first entries

--- a/pages/00.md
+++ b/pages/00.md
@@ -24,7 +24,7 @@ Quiero entender mejor cómo piensan en oriente.
 从小我就学会了小心避免误解。
 {: .zh}
 
-Yo también desde niño aprendí a tenerle cuidado a los malos entendidos.
+Yo también desde niño aprendí a tenerle cuidado a los malentendidos.
 {: .es}
 
 在世界各地，语言都有着不可估量的力量。用很少的几句话，一个梦想就能变成现实。用很少的几句话，也能伤害到所爱的人。
@@ -66,7 +66,7 @@ Sin la palabra y sin grandes actos, las personas como yo recurrimos al acto cont
 尽管我学过叙事写作，但语言最大的魅力在于它的模糊性和省略。只有另一个拥有共同密码的人才能解读我们想说但没有说出口的话。因为当我们说出一句话时，往往会扭曲最初的意图，变成一种模棱两可的举动。因为我们所说的是“已说出的”，而不一定是我们“想表达的”。
 {: .zh}
 
-Pero aún habiendo estudiado escritura narrativa, el lenguaje tiene su mayor riqueza en la ambigüedad y en la elipsis. Solo otro ser humano con código compartido logra descifrar lo que quisimos decir, pero que no dijimos. Porque cuando uno dice algo entorpece su intención primaria es un gesto equívoco. Porque lo que uno dice es lo dicho, pero no necesariamente lo que quiso decir.
+Pero aún habiendo estudiado escritura narrativa, el lenguaje tiene su mayor riqueza en la ambigüedad y en la elipsis. Solo otro ser humano con código compartido logra descifrar lo que quisimos decir, pero que no dijimos. Porque cuando uno dice algo entorpece su intención primaria, es un gesto equívoco. Porque lo que uno dice es lo dicho, pero no necesariamente lo que quiso decir.
 {: .es}
 
 事实上，此刻我并没有完全按照我想要的方式表达。我正在努力简化我的表达方式，以免干扰自动翻译的工作。
@@ -267,7 +267,7 @@ Pero solo en los juegos las reglas suelen ser claras.
 尽管我为自己的中文学习找了一些尴尬的借口，但还有一些真相我至今仍然害怕承认。
 {: .zh}
 
-Aunque me haya excusado vergonzosamente respecto a mis estudios con el chino, aún quedan verdades me aterra confesar.
+Aunque me haya excusado vergonzosamente respecto a mis estudios con el chino, aún quedan verdades que me aterra confesar.
 {: .es}
 
 我不再是个孩子了。
@@ -351,7 +351,7 @@ Como a mi alrededor todos esperaron siempre grandes cosas de mí un poco de esa 
 我的自尊心并不强。
 {: .zh}
 
-Yo no tengo muy alto auto estima.
+Yo no tengo muy alta auto-estima.
 {: .es}
 
 也许是因为我不太愿意分享我内心最深处的想法。
@@ -407,6 +407,8 @@ No tengo que rendirle cuentas ni mostrarle que progreso en la dirección que han
 
 Ya no soy un niño y mi deseo es aprender chino.
 {: .es}
+
+<hr />
 
 <center>
 [索引](index.md) | [一](01.md)
