--- a/pages/02.md
+++ b/pages/02.md
@@ -247,6 +247,8 @@ Por ejemplo, ¿por qué caracteres chinos está compuesto tu nombre? ¿Cómo eli
 
 A modo de título para mi primera carta elegí: "华舸小男孩". Mi nombre en chino me lo diste vos y no mi padre. ¿Podrías contarme cómo lo elegiste? ¿Fue por su sonido? ¿Guardan algún significado secreto sus caracteres? ¿Está relacionado con algún personaje famoso?
 
+<hr />
+
 <center>
-[零](00.md), [一](01.md) | [索引](index.md) | [三](03.md)
+[一](01.md) | [索引](index.md) | [三](03.md)
 </center>
