--- a/pages/03.md
+++ b/pages/03.md
@@ -15,6 +15,8 @@ Desde pequeña he prestado mucha atención a los nombres que se le dan a las per
 
 Este nombre no sólo tiene un significado profundo, sino que también es único. En mis 70 años de vida, nunca he escuchado de nadie con un nombre tan bonito, así que no sólo te amo, sino que también amo este nombre, ¡y espero que a ti también te guste!
 
+<hr />
+
 <center>
-[零](00.md), [一](01.md), [二](02.md) | [索引](index.md)
+[二](02.md) | [索引](index.md) | [四](04.md)
 </center>
