--- a/pages/02.md
+++ b/pages/02.md
@@ -24,7 +24,7 @@ En occidente hay dificultad para entender el wúwéi [无为](https://es.wikiped
 几个月前，我读了一本关于中国绘画的书；最后一句引用就来自这本书。据我理解，中文中有两个词来表示“空虚”。一个与“有”相对，另一个与“满”相对。前者是“无”，后者是“虚”。
 {: .zh}
 
-Hace unos meses leí un libro sobre pintura china; la última cita es de este libro. Según entendí en chino hay dos términos para designar el vacío. Uno se contraponer al tener/haber. Y otro se contrapone a lo que está lleno. El primero es 无 wú, el segundo 虛 xū. 
+Hace unos meses leí un libro sobre pintura china; la última cita es de este libro. Según entendí en chino hay dos términos para designar el vacío. Uno se contrapone al tener/haber. Y otro se contrapone a lo que está lleno. El primero es 无 wú, el segundo 虛 xū.
 
 当西方人想到“无为”时，他们想到的是“不做”的概念，即做那些不需要费力的事情。
 {: .zh}
