--- a/pages/05.md
+++ b/pages/05.md
@@ -68,5 +68,5 @@ Me llama mucho la atención. ¿Cómo se espera que uno "rectifique" su camino en
 <hr />
 
 <center>
-[四](04.md) | [索引](index.md)
+[四](04.md) | [索引](index.md) | [六](06.md)
 </center>
