--- a/pages/06.md
+++ b/pages/06.md
@@ -1,7 +1,7 @@
 # 2025年3月16日 | 16 de Marzo de 2025
 
 <div class="float-right-mobile-off">
-    <img src="fang-huizhen/imgs/06_huntun.jpeg" alt="Dos platos de Huntun"
+    <img src="/fang-huizhen/imgs/06_huntun.jpeg" alt="Dos platos de Huntun"
         width="300"
         height="300"
     />
@@ -39,5 +39,5 @@ Aún sigo muy interesado en las preguntas que yo hice en mi carta anterior. Pero
 <hr />
 
 <center>
-[五](05.md) | [索引](index.md)
+[五](05.md) | [索引](index.md) | [七](07.md)
 </center>
