--- a/pages/08.md
+++ b/pages/08.md
@@ -10,7 +10,7 @@ Leí tu carta en el instante en que la recibí.
 
 Esta vez la aplicación de traducción no fue suficiente. Algunos términos se resistían a ser traducidos con precisión. Por esto mi primera lectura estuvo marcada por cierta sensación generalizada de confusión.
 
-然而，怀旧之情却是普遍存在的。我对你写的内容非常感兴趣。我禁不住想，你写的东西一定很美。
+然而，怀旧之情却是普遍存在的。我对你写的内容非常感兴趣了。那天我就想：“她写的东西一定很美”。
 {.zh}
 
 Aún así, la nostalgia es universal. Me sentí sumamente atraído por lo que escribiste. No pude evitar pensar en que lo que habías escrito debía ser bello.
@@ -20,7 +20,7 @@ Aún así, la nostalgia es universal. Me sentí sumamente atraído por lo que es
 
 Recién hoy pude sentarme a traducir nuevamente la carta. Elegí un café cerca de casa en el que pudiera concentrarme un buen rato. Y esta vez utilicé un programa diferente.
 
-我逐句翻译，注意始终传达您告诉我的原意，而不是逐字逐句地翻译每一句，好像它们彼此独立一样。
+我逐句翻译了，注意始终传达您告诉我的原意，而不是逐字逐句地翻译每一句，好像它们彼此独立一样。
 {.zh}
 
 Traduje oración por oración y manteniendo el cuidado de arrastrar en cada momento la intención original de lo que me contaste en lugar de traducir literalmente cada oración como si fueran independientes entre sí.
@@ -30,11 +30,16 @@ Traduje oración por oración y manteniendo el cuidado de arrastrar en cada mome
 
 A medida que avanzaba en esta tarea, intentaba resistirme, pero no pude. Dejé caer una lágrima que oculté rápidamente porque estaba en público.
 
-美丽的文本不仅仅是写得好的文本。我不在乎夸夸其谈。你的文字不是因为你的词语而美丽，而是因为你的目光而美丽。我们的思绪就像一只焦躁不安的鸟，到处飘忽不定。时不时地，一些特定的细节（也许其他人看不到）会引起我们的注意，鸟儿会降落并休息一下，然后继续飞行。您与我分享的这个轶事表明了您的观点是多么独特。
+您的文字不是因为你的词语而美丽，而是因为您的目光而美丽。我们的思绪就像一只焦躁不安的鸟，到处飘忽不定。时不时地，一些特定的细节（也许其他人看不到）会引起我们的注意，鸟儿会降落并休息一下，然后继续飞行。您与我分享的这个轶事表明了您的目光是多么独特。
 {.zh}
 
 Un texto bello no es aquel que únicamente está bien escrito. A mí la grandilocuencia me tiene sin cuidado. Tu texto no es bello por tus palabras, sino por tu mirada. Nuestra mente acostumbra a revolotear por aquí y por allá como un pájaro inquieto. Cada tanto algún detalle puntual (quizás invisible para el resto) llama nuestra atención y el pájaro se posa y descansa en este para luego seguir su vuelo. Esta anécdota que compartiste conmigo evidencia cuán particular es tu mirada.
 
+感谢您与我分享这段记忆。
+{.zh}
+
+Gracias por compartir este recuerdo conmigo.
+
 <center>
-[七](07.md) | [索引](index.md)
+[七](07.md) | [索引](index.md) | [九](09.md)
 </center>
