--- a/pages/10.md
+++ b/pages/10.md
@@ -48,4 +48,6 @@ Pero el verdadero amor empezó desde el principio de la pandemia y la razón bro
 
 ¡Por eso, tejí cuidadosamente un suéter del mismo color que la bandera nacional Argentina para expresar mi gratitud al país que me aceptó!
 
+<center>
 [九](09.md) | [索引](index.md) | [十一](11.md)
+</center>
