--- a/pages/11.md
+++ b/pages/11.md
@@ -29,7 +29,7 @@ Preparé un discurso:
     />
 </div>
 
-时代在变，但有些事情始终如一：没有人会否认爱情是多么的不可能。然而，从外表看，Juampi 和 Tami 是如此完美，以至于他们让这一切看起来很容易。
+时代在变，但有些事情始终如一：没有人能否认，爱情本身就是一种不太可能的存在。然而，从外表看，Juampi 和 Tami 是如此完美，以至于他们让这一切看起来很容易。
 {.zh}
 
 Los tiempos cambian, pero algunas cosas son siempre iguales: nadie me va a negar lo improbable que es el amor. Y sin embargo, desde afuera Juampi & Tami son tan perfectos que lo hacen ver fácil.
@@ -87,4 +87,6 @@ Será improbable, sí. pero así se ve.
     height="600"
 />
 
-[十](10.md) | [索引](index.md)
+<center>
+[十](10.md) | [索引](index.md) | [十二](11.md)
+</center>
