--- a/pages/12.md
+++ b/pages/12.md
@@ -234,5 +234,5 @@ En todos estos años he descubierto muchas cosas sobre mí. No solo he sucumbido
 Si pude conservar este capricho en lugar de haber juntado hastío y no querer leer ni estudiar ni investigar más nada en mi vida, entonces algo bien debo haber hecho.
 
 <center>
-[十一](11.md) | [索引](index.md)
+[十一](11.md) | [索引](index.md) | [十三](13.md)
 </center>
